k8s/21_08_2026/app-config-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-app-pod
spec:
  containers:
  - name: web-app
    image: python:3.11-slim
    command: ["python", "-c", "import time; print('Running...'); time.sleep(3600)"]
