k8s/21_08_2026/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-beta-pod
  namespace: ns-beta
spec:
  podSelector:
    matchLabels:
      run: beta-pod
  policyTypes:
  - Ingress
  ingress: []
